# grub-efi

./: .gitignore  acinclude.m4  configure.ac  configure.in
efi/: Makefile.am  efidisk.c  efigraph.c  efiserial.c  graphics.c
efi/grub/efi/: api.h
efi/grub/i386/: linux.h
efi/ia32/loader/: linux.c
efi/x86_64/loader/: linux.c
grub/: .gitignore
netboot/: Makefile.am
stage1/: .gitignore  Makefile.am
stage2/: .gitignore  Makefile.am  asm.S  builtins.c  char_io.c  checker.c  common.c  fsys_ext2fs.c  fsys_uefi.c  graphics.c  md5.c  mux.c  serial.c  sha256crypt.c  sha512crypt.c  shared.h  term.h  terminfo.c  terminfo.h
util/: .gitignore  Makefile.am
